kubernetes/app-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: app-demo
spec:
  selector:
    app: demo-app
  ports:
  - port: 5000
    targetPort: 5000
